--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 
 <body>
 
-  <div class="main">
-    <img class="img-qr" src="./images/image-qr-code.png" alt="Imagen QR">
-    <h1 class="title">Improve your front-end skills by building projects</h1>
-    <p class="description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
+  <main>
+    <article class="card">
+      <img class="img-qr" src="./images/image-qr-code.png" alt="Imagen QR">
+      <h1 class="title">Improve your front-end skills by building projects</h1>
+      <p class="description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </article>
+  </main>
 
 
   <!-- <div class="attribution">
